# pyOMA

./: .gitignore  CITATION.cff  README.rst  pyproject.toml  requirements_dev.txt  setup.py
doc/: api_reference.rst  applications.rst  conf.py  continuous_monitoring.rst  example_data.rst  examples.rst  getting_started.rst  index.rst  input_file_formats.rst
pyOMA/: __init__.py
pyOMA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyOMA/GUI/: HelpersGUI.py  JupyterGUI.py  PlotMSHGUI.py  StabilGUI.py  __init__.py
pyOMA/core/: ERA.py  Helpers.py  ModalBase.py  PLSCF.py  PRCE.py  PlotMSH.py  PostProcessingTools.py  PreProcessingTools.py  SSICovRef.py  SSIData.py  StabilDiagram.py  VarSSIRef.py  __init__.py
scripts/: __init__.py  multi_setup_analysis.ipynb  multi_setup_analysis.py  multi_setup_analysis_poger.ipynb  multi_setup_analysis_poger.py  single_setup_analysis.ipynb  single_setup_analysis.py
tests/: basic_test.py  conftest.py  system_ambient_ifrf.py  test_gui.py  test_helpers.py  test_modal_methods.py  test_multi_setup.py  test_preprocessing.py  test_stabildiagram.py
tests/files/: ssi_config.txt  varssi_config.txt
